Fixed ibxLabel so it handles text wrap and overflow correctly...wrapping vs. ellipses

--- a/src/main/resources/META-INF/resources/ibx/resources/css/label.ibx.css
+++ b/src/main/resources/META-INF/resources/ibx/resources/css/label.ibx.css
@@ -10,19 +10,13 @@
 
 .ibx-label-text
 {
-	flex:0 0 auto;
+	flex:0 1 auto;
 	text-overflow:ellipsis;
 	overflow:hidden;
 	-ms-user-select:none;
 	user-select:none;
 	cursor:inherit;
 }
-
-.ibx-label-text.ibx-label-text-wrap
-{
-	flex:0 1 auto;
-}
-
 
 .ibx-label-glyph
 {
